[gd_scene load_steps=19 format=2]

[ext_resource path="res://assets/card/border.png" type="Texture" id=1]
[ext_resource path="res://assets/card/small_1.png" type="Texture" id=2]
[ext_resource path="res://assets/card/small_3.png" type="Texture" id=3]
[ext_resource path="res://assets/card/small_4.png" type="Texture" id=4]
[ext_resource path="res://assets/card/big_10.png" type="Texture" id=5]
[ext_resource path="res://assets/card/small_5.png" type="Texture" id=6]
[ext_resource path="res://assets/card/big_2.png" type="Texture" id=7]
[ext_resource path="res://assets/card/big_4.png" type="Texture" id=8]
[ext_resource path="res://assets/card/black_gem.png" type="Texture" id=9]
[ext_resource path="res://assets/card/big_1.png" type="Texture" id=10]
[ext_resource path="res://assets/card/gold_gem.png" type="Texture" id=11]
[ext_resource path="res://assets/card/white_gem.png" type="Texture" id=12]
[ext_resource path="res://assets/card/red_gem.png" type="Texture" id=13]
[ext_resource path="res://assets/card/green_gem.png" type="Texture" id=14]
[ext_resource path="res://assets/card/blue_gem.png" type="Texture" id=15]
[ext_resource path="res://assets/card/small_2.png" type="Texture" id=16]
[ext_resource path="res://assets/card/big_3.png" type="Texture" id=17]
[ext_resource path="res://scenes/board/PlayerStats.gd" type="Script" id=18]

[node name="PlayerStats" type="Node2D"]
position = Vector2( 18, 10 )
script = ExtResource( 18 )

[node name="Border" type="Sprite" parent="."]
position = Vector2( 38, 25.5 )
scale = Vector2( 0.0933333, 0.0641667 )
texture = ExtResource( 1 )

[node name="GoldGem" type="Sprite" parent="."]
position = Vector2( 14, 19 )
texture = ExtResource( 11 )

[node name="Small3" type="Sprite" parent="GoldGem"]
position = Vector2( -11, 8 )
texture = ExtResource( 3 )

[node name="BlueGem" type="Sprite" parent="."]
position = Vector2( 37, 41 )
texture = ExtResource( 15 )

[node name="Big10" type="Sprite" parent="BlueGem"]
position = Vector2( 0, 2 )
texture = ExtResource( 5 )

[node name="Small3" type="Sprite" parent="BlueGem"]
position = Vector2( -11, 7 )
texture = ExtResource( 3 )

[node name="BlackGem" type="Sprite" parent="."]
position = Vector2( 36, 21 )
texture = ExtResource( 9 )

[node name="Big4" type="Sprite" parent="BlackGem"]
position = Vector2( 0, 1 )
texture = ExtResource( 8 )

[node name="Small4" type="Sprite" parent="BlackGem"]
position = Vector2( -10, 6 )
texture = ExtResource( 4 )

[node name="RedGem" type="Sprite" parent="."]
position = Vector2( 58, 21 )
texture = ExtResource( 13 )

[node name="Big2" type="Sprite" parent="RedGem"]
texture = ExtResource( 7 )

[node name="Small1" type="Sprite" parent="RedGem"]
position = Vector2( -10, 7 )
texture = ExtResource( 2 )

[node name="GreenGem" type="Sprite" parent="."]
position = Vector2( 13, 41 )
texture = ExtResource( 14 )

[node name="Big3" type="Sprite" parent="GreenGem"]
position = Vector2( 0, 2 )
texture = ExtResource( 17 )

[node name="Small5" type="Sprite" parent="GreenGem"]
position = Vector2( -10, 5 )
texture = ExtResource( 6 )

[node name="WhiteGem" type="Sprite" parent="."]
position = Vector2( 60, 41 )
texture = ExtResource( 12 )

[node name="Big1" type="Sprite" parent="WhiteGem"]
position = Vector2( -1, 2 )
texture = ExtResource( 10 )

[node name="Small2" type="Sprite" parent="WhiteGem"]
position = Vector2( -12, 6 )
texture = ExtResource( 16 )

[node name="PlayerId" type="Label" parent="."]
margin_left = 1.0
margin_right = 77.0
margin_bottom = 14.0
text = "Saran (Host)"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
